fix-z-index

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -13,7 +13,7 @@
   left: 0;
   top: 0;
   transform: translateX(-101%);
-  z-index: 9;
+  z-index: 200;
 }
 .sidebarIsOpen {
   transform: translateX(0);
@@ -26,7 +26,7 @@
   width: 100vw;
   height: 100vh;
   background-color: var(--modal-overlay);
-  z-index: 0;
+  z-index: 100;
   transform: translateX(-101%);
   transition: transform 0.3s ease;
 }
@@ -112,11 +112,11 @@
 
 @media (min-width: 1440px) {
   .sidebar {
-    position: initial;
+    /* position: initial;
     left: initial;
-    top: initial;
+    top: initial; */
     transform: translateX(0);
-    z-index: initial;
+    z-index: 0;
   }
 
   .overlay {
